# Machine-Learning-TPs

./: .gitignore  SlideMakefile.mk  current
.github/workflows/: make_current_report.yml
Ejercicio/: Datos Alimenticios.csv  Makefile  analyzer.py  index.md  informe.md  styles.html
Ejercicio2/: Makefile  index.md  styles.html
Ejercicio2/data/: data.json  simple_regression.json
Ejercicio2/plotters/: plane.py
Ejercicio2/processing/: Cargo.toml
Ejercicio2/processing/src/: main.rs  models.rs
Ejercicio3/: index.md
Final/: Makefile  analyze.py  config.json  index.md  main.py  plot_accuracy.py  requirements.txt  styles.html  update-daemon.sh
TP1/: Makefile  index.md  noticias_argentinas.csv  plot_part2.py  preferencias_britanicos.csv  requirements.txt  styles.html  tp1.py
TP2/: .gitignore  Dockerfile  Makefile  index.md  part1_analysis.py  part1_balance.py  part1_fetch.py  part1_result_analysis.py  part1_run.py  part1_utils.py  part2_analysis.py  part2_knn.py  part2_preprocess.py  part2_result_analysis.py  requirements.txt  run.py
TP2/lib/: Cargo.toml
TP2/lib/examples/: dotgraph.rs
TP2/lib/src/: decision_tree.rs  lib.rs  train.rs
TP3/: .gitignore  Makefile  index.md  plots.py  requirements.txt
TP3/part1/: __main__.py  activation_functions.py  network.py  plot_line.py  single_data.py
TP3/part2/: __main__.py
TP3/src/: main.py
TP3/utils/: __init__.py
TP4/: .env.dev  Hierarchical.mk  KMeans.mk  Makefile  index.md  requirements.txt  styles.html
TP4/input/: api_filled.csv  default.csv  normalized.csv  null_filled.csv  numerical.csv  raw.csv  (+1 more)
(+22 files in other folders)
