[package]
name = "processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
csv = "1.3.0"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
statrs = "0.16.0"
